<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/recyclerItem">

            <TextView
                android:id="@+id/dummy_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#00000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/chores_height_component"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/chores_it_is_done"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toTopOf="@id/chores_expandable_container_cardview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chores_item_name"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:paddingTop="2dp"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Name"
                app:layout_constraintBottom_toTopOf="@id/chores_expandable_container_cardview"
                app:layout_constraintStart_toEndOf="@+id/chores_it_is_done"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/chores_expand_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:drawableBottom="@drawable/ic_expand_more_24"
                app:backgroundTint="@color/expandBtn"
                app:layout_constraintBottom_toTopOf="@id/chores_expandable_container_cardview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

            <ImageButton
                android:id="@+id/remove_item_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_delete_item_24"
                android:visibility="gone"
                app:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/chores_expandable_container_cardview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/edit_item_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_edit_item_24"
                android:visibility="gone"
                app:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toTopOf="@id/chores_expandable_container_cardview"
                app:layout_constraintEnd_toStartOf="@+id/remove_item_button"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/chores_expandable_container_cardview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorItemContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/chores_height_component"
                app:layout_constraintTop_toBottomOf="@id/chores_height_component">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/chores_expandable_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/chores_when_needed_done_text"
                        style="@style/Widget.TipTime.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="visible"
                        tools:text="by 6/4/21" />
                    <!--                    gone-->

                    <TextView
                        android:id="@+id/chores_difficulty"
                        style="@style/Widget.TipTime.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="visible"
                        tools:text="@string/label_difficulty_1" />


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/hint_volunteer"
                        android:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/chores_who_is_doing_it_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            tools:text="Eddy" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/chores_priority_text"
                        style="@style/Widget.TipTime.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="visible"
                        tools:text="@string/label_priority_2" />

                    <TextView
                        android:id="@+id/chores_added_by_text"
                        style="@style/Widget.TipTime.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="visible"
                        tools:text="by Ashley" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintTop_toBottomOf="@id/chores_expandable_container_cardview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>